src/index.css
#background{
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
}

footer{
  background-color: #242526;
  height: 80px;
}

footer p{
  padding:20px;
  color: white;
}

#link, #github, #linkedin {
  color: darkolivegreen;
  display: inline;
  font-size: 1.5vw;
}

#LinkedIn, #Download, #Github {
  color: darkolivegreen;
  display: inline;
  width: auto;
}

#hero {
  height: 150px;
  width: 100%;
  object-fit: cover;
}

#header{
  width: 100vw;
}

#header h1{
  color: white;
  font-size: 30px;
  padding-left: 1vw;
  padding: 0px;
}

h2 {
  background-color: #484a4d;
  color: white;
  padding: 5px;
  margin-top: -20px;
  font-size: 25px;
}

#medialink{
  float: right;
  padding: 10px;
}

#facebook, #twitter, #instagram {
  padding-right: 10px;
}

#about-text{
  width: 80%;
  padding-left: 10vw;
  word-break: break-word;
}

aside{
  width: 30%;
  text-align: center;
  word-break: break-word ;
  margin: 20px;
  display: flex;
  flex-wrap: wrap;
}

body {
  margin: 0;
  background: #d4d4d4;
  font-family: roboto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#thanks-main {
  margin-top: -8vw;
}

.thanks{
  text-align: center;
  padding: 5vw;
  display: block;
  margin-top: 8vw;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
  background-color: #484a4d;
}

.thanks p{
  color: white;
}

.thanks a {
  color: darkolivegreen;
}

.thankstitle{
  font-size: 40px;
}

:root {
  --bg:  #242526;
  --bg-accent: #484a4d;
  --text-color: #dadce1;
  --nav-size: 60px;
  --border: 1px solid #474a4d;
  --border-radius: 8px;
  --speed: 500ms; 
  overflow-x: hidden;
}


ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

a {
  color: var(--text-color);
  text-decoration: none;;
  z-index: 4;
  width: 100%;
  height: 100%;
}


.navbar {
  height: 80px;
  background-color: var(--bg);
  padding-bottom: 0px;
  border-bottom: var(--border);
  width: 100%;
}

#nav-title {
  text-align: left;
  width: 100%;
  margin-left: 15px;
}

/* <ul> */
.navbar-nav {
  max-width: 100%;
  height: 100%;
  display: flex;
  justify-content: flex-end;
  margin-top: -10px;
  padding-bottom:10px;
}

/* <li> */
.nav-item {
  width: calc(var(--nav-size) * 0.8);
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 3vw;
}

/* Icon Button */
.icon-button {
  --button-size: calc(var(--nav-size) * 0.5);
  width: var(--button-size);
  height: var(--button-size);
  background-color: #484a4d;
  border-radius: 50%;
  padding: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: filter 300ms;
}

.icon-button:hover {
  filter: brightness(1.2);
}

.icon-button svg { 
  fill: var(--text-color);
  width: 20px;
  height: 20px;
}


/* Dropdown Menu */

.dropdown {
  position: absolute;
  top: 200px;
  width: 300px;
  transform: translateX(-45%);
  background-color: var(--bg);
  border: var(--border);
  border-radius: var(--border-radius);
  padding: 1rem;
  overflow: hidden;
  transition: height var(--speed) ease;
  z-index: 2;
}

.menu {
  width: 100%;
  z-index: 2;
}

.menu-item {
  height: 50px;
  display: flex;
  align-items: center;
  border-radius: var(--border-radius);
  transition: background var(--speed);
  padding: 0.5rem;
  z-index: 2;
}

.menu-item a{
  width: 100%;
  height: 20px;
  z-index: 2;
}

.menu-item .icon-button {
  margin-right: 0.5rem;
  z-index: 2;
}


.menu-item .icon-button:hover {
  filter: none;
  z-index: 2;
}

.menu-item:hover {
  background-color: #525357;
  z-index: 2;
}

.icon-right {
  margin-left: auto;
}

/* CSSTransition classes  */
.menu-primary-enter {
  position: absolute;
  transform: translateX(-110%);
}
.menu-primary-enter-active {
  transform: translateX(0%);
  transition: all var(--speed) ease;
}
.menu-primary-exit {
  position: absolute;
}
.menu-primary-exit-active {
  transform: translateX(-110%);
  transition: all var(--speed) ease;
}


.menu-secondary-enter {
  transform: translateX(110%);
}
.menu-secondary-enter-active {
  transform: translateX(0%);
  transition: all var(--speed) ease;
}
.menu-secondary-exit {
  position: absolute;
}
.menu-secondary-exit-active {
  transform: translateX(110%);
  transition: all var(--speed) ease;
}

h2, h3 {
  text-align: center;
}

p {
  text-align: center;
  padding-left: 40px;
  padding-right: 40px;
}

#homeImg {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.container{
  margin-top: 15vh;
  height: 100%;
}

.contact-info p {
  padding:20px
}

#photo{
  border-radius: 400px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-height: 250px;
}

#skills {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 5px
}

#skills img {
  padding: 10px;
}

#mysql_logo {
height: 50%;
width: 6%;
}

#jQuery_logo {
  height: 4.1%;
width: 4.1%;
}

#Github_logo{
  height: 4.7%;
  width: 4.7%;
}

#npm_logo{
  width: 8%;
  height: 8%;
}

#react_logo{
width: 5%;
height: 5%;
}

#border-radius {
  border-radius: 40px;
}

.resume img{
  padding: 5vw;
  display: flex;
  flex-wrap: wrap;
  margin-left: -5vw;
  margin-right: auto;
  width: 70%;
  object-fit: cover;
  height: 80%;
  width: 100%;
}

.resume{
  text-align: center;
}

.resume h2, .contact h2 {
  margin-top: -1px;
}

.resume-box{
  padding: 10px;
  background-color: rgb(240, 239, 239);
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
  box-shadow:10px 5px 5px grey;
  border:darkolivegreen 10px solid;
}

.resume ul li, p, h3, h4, h5, h6 {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  word-wrap: break-word;
}

.contact ul li a{
  font-size: 1.7vw;
  display: inline;
  width: 100%;
}

.resume ul li{
  display: inline;
  padding: 1px;
  font-size: 1.2vw;
}

.resume h3{
  font-size: 3vw;
}

.resume h4{
font-size: 2vw;
text-decoration: #242526 underline;

}

.resume h5{
  font-size: 1.7vw;
  display: inline;
  width: 100%;
}

.resume h6{
  font-size: 1.4vw;
}

.resume p{
  font-size: 1.2vw ;
  padding-left: 40px;
  padding-right: 40px;
}

.resume a {
  display: inline;
  width: 100%;
}
.container {
width: 100%;
}

.form{
  width: 100%;
  padding: 20px;
  display: block;
  text-align: center;
  margin-left: 8vw;
  margin-top: -10vw;
}

.form-group{
  width: 100%;
  display: block;
  width: 80%;
}

.form-group-btn{
  margin-left: 21.7vw;
}

.form-control {
  width: 70%;
  padding: 10px;
}

#card-container{
  z-index: 1;
}

#card-items {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: auto;
  grid-gap: 1rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  position: relative;
  z-index: 1;
}

.card {
  background-color: #28292b;
  border-radius: 5px;
  height: 450px;
  margin: 2rem;
  position: relative;
  width: 400px;
  box-shadow:10px 5px 5px grey;
  position: relative;
  z-index: 1;
  transition: filter 300ms;
  padding-right: 1vw;
}

.card:hover {
  filter: contrast(1.5);

}

#card-img {
  width: 100%;
  max-height: 65%;
  object-fit: cover;
}

#card-title {
  font-size: 22px;
  text-align: center;
  color: white;
}

#card-topics {
  font-size: 12px;
  text-align: center;
  color:white;
  margin-top: -10px;
}

#project-icon {
  max-height: 50%;
  transition: filter 300ms;
  position: relative;
  top: -10px;
}

#project-icon:hover {
  filter:brightness(1.5)
}


@media only screen and (max-width: 500px) {
  .card {
    width: 300px;
  }
  .form-group, .form-group-btn{
    margin-left: -5vw;
  }
  .form{
    width: 100vw;
  }
}

/* Fog */
/*header*/
/* #header{
  width: 101vw;
}

.fogwrapper {
  height: 150px;
  position: absolute;
  top: 0;
  width: 101vw;
  -webkit-filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2);
  filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2)
}
#foglayer_01, #foglayer_02, #foglayer_03 {
  height: 100%;
  position: absolute;
  width: 100%;
}
#foglayer_01 .image01, #foglayer_01 .image02,
#foglayer_02 .image01, #foglayer_02 .image02,
#foglayer_03 .image01, #foglayer_03 .image02 {
  float: left;
  height: 100%;
  width: 50%;
}
#foglayer_01 {
  -webkit-animation: foglayer_01_opacity 10s linear infinite, foglayer_moveme 15s linear infinite;
  -moz-animation: foglayer_01_opacity 10s linear infinite, foglayer_moveme 15s linear infinite;
  animation: foglayer_01_opacity 10s linear infinite, foglayer_moveme 15s linear infinite;
}
#foglayer_02, #foglayer_03 {
  -webkit-animation: foglayer_02_opacity 21s linear infinite, foglayer_moveme 13s linear infinite;
  -moz-animation: foglayer_02_opacity 21s linear infinite, foglayer_moveme 13s linear infinite;
  animation: foglayer_02_opacity 21s linear infinite, foglayer_moveme 13s linear infinite;
}

/* ---------- Moving Fog ---------- */
/*
  'size: cover' || 'size: 100%'; results remain the same
  'attachment: scroll' can be added or removed; results remain the same
  'attachment: fixed' causing unexpected results in Chrome
  'repeat-x' || 'no-repeat'; results remain the same
*/ 
/* #foglayer_01 .image01, #foglayer_01 .image02 {
  background: url("https://raw.githubusercontent.com/danielstuart14/CSS_FOG_ANIMATION/master/fog1.png") center center/cover no-repeat transparent;
}
#foglayer_02 .image01, #foglayer_02 .image02,
#foglayer_03 .image01, #foglayer_03 .image02{
  background: url("https://raw.githubusercontent.com/danielstuart14/CSS_FOG_ANIMATION/master/fog2.png") center center/cover no-repeat transparent;
}

/* ---------- Keyframe Layer 1 ---------- */
/*
@-webkit-keyframes foglayer_01_opacity {
  0% { opacity: .1; }
  22% { opacity: .5; }
  40% { opacity: .28; }
  58% { opacity: .4; }
  80% { opacity: .16; }
  100% { opacity: .1; }
}
@-moz-keyframes foglayer_01_opacity {
  0% { opacity: .1; }
  22% { opacity: .5; }
  40% { opacity: .28; }
  58% { opacity: .4; }
  80% { opacity: .16; }
  100% { opacity: .1; }
}
@-o-keyframes foglayer_01_opacity {
  0% { opacity: .1; }
  22% { opacity: .5; }
  40% { opacity: .28; }
  58% { opacity: .4; }
  80% { opacity: .16; }
  100% { opacity: .1; }
}
@keyframes foglayer_01_opacity {
  0% { opacity: .1; }
  22% { opacity: .5; }
  40% { opacity: .28; }
  58% { opacity: .4; }
  80% { opacity: .16; }
  100% { opacity: .1; }
}
/* ---------- Keyframe Layer 2 ---------- */
/*
@-webkit-keyframes foglayer_02_opacity {
  0% { opacity: .5; }
  25% { opacity: .2; }
  50% { opacity: .1; }
  80% { opacity: .3; }
  100% { opacity: .5; }
}
@-moz-keyframes foglayer_02_opacity {
  0% { opacity: .5; }
  25% { opacity: .2; }
  50% { opacity: .1; }
  80% { opacity: .3; }
  100% { opacity: .5; }
}
@-o-keyframes foglayer_02_opacity {
  0% { opacity: .5; }
  25% { opacity: .2; }
  50% { opacity: .1; }
  80% { opacity: .3; }
  100% { opacity: .5; }
}
@keyframes foglayer_02_opacity {
  0% { opacity: .5; }
  25% { opacity: .2; }
  50% { opacity: .1; }
  80% { opacity: .3; }
  100% { opacity: .5; }
}
/* ---------- Keyframe Layer 3 ---------- */
/*
@-webkit-keyframes foglayer_03_opacity {
  0% { opacity: .8 }
  27% { opacity: .2; }
  52% { opacity: .6; }
  68% { opacity: .3; }
  100% { opacity: .8; }
}
@-moz-keyframes foglayer_03_opacity {
  0% { opacity: .8 }
  27% { opacity: .2; }
  52% { opacity: .6; }
  68% { opacity: .3; }
  100% { opacity: .8; }
}
@-o-keyframes foglayer_03_opacity {
  0% { opacity: .8 }
  27% { opacity: .2; }
  52% { opacity: .6; }
  68% { opacity: .3; }
  100% { opacity: .8; }
}
@keyframes foglayer_03_opacity {
  0% { opacity: .8; }
  27% { opacity: .2; }
  52% { opacity: .6; }
  68% { opacity: .3; }
  100% { opacity: .8; }
}
/* ---------- Keyframe moveMe ---------- */
/*
@-webkit-keyframes foglayer_moveme {
  0% { left: 0; }
  100% { left: -100%; }
}
@-moz-keyframes foglayer_moveme {
  0% { left: 0; }
  100% { left: -100%; }
}
@-o-keyframes foglayer_moveme {
  0% { left: 0; }
  100% { left: -100%; }
}
@keyframes foglayer_moveme {
  0% { left: 0; }
  100% { left: -100%; }
} 
 */

